Fix song tabcomplete uri usage